# zenzense-api-starter

./: .env  .gitignore  CMakeLists.txt  README.md  bootstrap.bat  docker-compose.yml  schema.cql  vcpkg.json
client/: package.json  svelte.config.js
client/src/routes/demo/: +page.svelte  +page.ts
config/: drogon.json
public/: index.html  vintage.html
public/assets/: style.css  vintage.css
src/: main.cpp
src/controllers/: demo_page_ctrl.cpp  demo_page_ctrl.h  status_ctrl.cpp  status_ctrl.h  vintage_ctrl.cpp  vintage_ctrl.h
src/util/: dotenv.cpp  dotenv.h  fs.cpp  fs.h
tests/: CMakeLists.txt
